Version 0.10.3
  Added scaling & units to NodeVariableDual as per NodeVariableNumber
  Amended NodeVariableNumber to support scaling down to 0.01 (2 decimal places)

Version 0.10.2
  Addressed dialog opening delays by adding extra watches & removing code in 'on-update'

Version 0.10.1
  Added error notification to MFD upload dialog
  Amended scroll on MDF Dialog
  Changed text on exit button
  fixed bug in eventVariableInformation

Version 0.10.0
  Added channel names
  Added channel names to import and export
  NodeVariableDual - fixed max value
  Now returns default node name if blank name added