@@ -13,12 +13,11 @@
       <q-input
         class="ev_input_box"
         :mask="displayMask"
+        reverse-fill-mask
         debounce="10"
         dense
         v-model="eventValue"
         outlined
-        :error-message="error_message"
-        :error="error"
         @change="update_event">
       </q-input>
     </q-card-section>
@@ -91,45 +90,62 @@ const props = defineProps({
 })
 
 const store = inject('store')
-const error = ref(false)
-const error_message = ref('')
 const eventValue = ref()
 //console.log(name + `: Props : ${JSON.stringify(props)}`)
 
+//
+//
 const displayMask = computed(() => {
   let MaxValue = 255* props.displayScale + props.displayOffset
-  if(MaxValue > 100000) {
-    return '######'
-  } 
-  if(MaxValue > 10000) {
-    return '#####'
-  } 
-  else if (MaxValue > 1000) {
-    return '####'
-  }
-  else {
-    return '###'
-  }
+  if (MaxValue > 100000) { return '######' }
+  if (MaxValue > 10000) { return '#####' }
+  if (MaxValue > 1000) { return '####' }
+  if (MaxValue > 100) { return '###' }
+  if (MaxValue > 10) { return '##.#' }
+  if (MaxValue > 1) { return '#.##' }
+  return '.###'
  })
 
+ //
+ //
  const minValue = computed(() => {
-  return (props.min * props.displayScale) + props.displayOffset
+  let fixed = 0
+  if (props.displayScale < 1){ fixed = 1 }
+  if (props.displayScale < 0.1){ fixed = 2 }
+  if (props.displayScale < 0.01){ fixed = 3 }
+  return ((props.min * props.displayScale) + props.displayOffset).toFixed(fixed)
  })
 
+ //
+ //
  const maxValue = computed(() => {
-  return (props.max * props.displayScale) + props.displayOffset
+  let value = 0
+  try {
+    // work out how many decimal points the result should be
+    let fixed = 0
+    if (props.displayScale < 1){ fixed = 1 }
+    if (props.displayScale < 0.1){ fixed = 2 }
+    if (props.displayScale < 0.01){ fixed = 3 }
+    // work out max value from number of bits
+    let maxFromBits = (2 ** (props.endBit - props.startBit + 1) - 1)
+    // work out which max value to use
+    let maxRawvalue = ( props.max < maxFromBits) ? props.max : maxFromBits
+    // work out scaled max value with any offset, to required decimal places
+    value = ((maxRawvalue * props.displayScale) + props.displayOffset).toFixed(fixed)
+    //console.log (name + `: maxValue ${value} ${props.max} ${maxFromBits}`)
+  } catch {}
+  return value
  })
-
 
 const eventVariableValue = computed(() => {
   return store.getters.event_variable_by_identifier(props.nodeNumber, props.eventIdentifier, props.eventVariableIndex)
 })
 
 watch(eventVariableValue, () => {
-  eventValue.value = getDisplayValue(eventVariableValue.value, 
-    props.displayScale, 
-    props.displayOffset, 
-    props.startBit, 
+  eventValue.value = getDisplayValue(eventVariableValue.value,
+    props.displayScale,
+    props.displayOffset,
+    props.startBit,
     props.endBit)
 })
 
@@ -138,45 +154,43 @@ const update_event = (newValue) => {
   let byteValue = eventVariableValue.value
   let processedValue = Number(newValue)            // take a copy to change
 
-  // max & min are the max & min of the values in the byte variable value
-  // so need to scale up to check the display value actually used
-  if (processedValue < minValue.value){
-    error.value = true
-    error_message.value = 'Value less than ' + minValue.value
-  }
-  else if (processedValue > maxValue.value) {
-    error.value = true
-    error_message.value = 'Value more than ' + maxValue.value
-  } 
-  else {
-    byteValue = setByteVariable(byteValue, processedValue, props.displayScale, props.displayOffset, props.startBit, props.endBit)
-    error_message.value = ''
-    error.value = false
-    store.methods.event_teach_by_identifier(
-      props.nodeNumber, 
-      props.eventIdentifier, 
-      props.eventVariableIndex, 
-      byteValue,
-      true,
-      getLinkedEventVariables(props.configuration)
-    )
-  }
+  // check newValue against max & min display limits
+  if (processedValue < minValue.value){ processedValue = minValue.value }
+  if (processedValue > maxValue.value) { processedValue = maxValue.value }
+  //
+  byteValue = setByteVariable(
+    byteValue,
+    processedValue,
+    props.displayScale,
+    props.displayOffset,
+    props.startBit,
+    props.endBit
+  )
+  //
+  store.methods.event_teach_by_identifier(
+    props.nodeNumber,
+    props.eventIdentifier,
+    props.eventVariableIndex,
+    byteValue,
+    true,
+    getLinkedEventVariables(props.configuration)
+  )
   // update display value
-  eventValue.value = getDisplayValue(eventVariableValue.value, 
-    props.displayScale, 
-    props.displayOffset, 
-    props.startBit, 
-    props.endBit)
+  eventValue.value = getDisplayValue(eventVariableValue.value,
+    props.displayScale,
+    props.displayOffset,
+    props.startBit,
+    props.endBit
+  )
 }
 
 
 onMounted(() => {
 //  console.log(name + `: onMounted`)
-  let startValue = store.getters.event_variable_by_identifier(props.nodeNumber, props.eventIdentifier, props.eventVariableIndex)
-  eventValue.value = getDisplayValue(eventVariableValue.value, 
-    props.displayScale, 
-    props.displayOffset, 
-    props.startBit, 
+  eventValue.value = getDisplayValue(eventVariableValue.value,
+    props.displayScale,
+    props.displayOffset,
+    props.startBit,
     props.endBit)
 })
 
